fix: navbar vertical alignment

--- a/frontend/src/sections/Navbar/Navbar.module.css
+++ b/frontend/src/sections/Navbar/Navbar.module.css
@@ -30,6 +30,7 @@
   margin: 0;
   padding: 0;
   display: flex;
+  align-items: center;
 }
 
 .navItem {
